# gpt_sovits_rs

./: Cargo.toml  README.md  dict.json  gen_polyphonic_fix.py  input.txt
examples/: simple.rs  stream.rs
resource/: en_word_dict.json  rule.pest  symbols_v2.json  zh_word_dict.json
resource/g2pw/: CHARS.txt  LABELS.txt  MONOPHONIC_CHARS.txt  POLYPHONIC_CHARS.txt  bopomofo_to_pinyin_wo_tune_dict.json  char_bopomofo_dict.json  dict_mono_chars.json  dict_poly_chars.json  dict_poly_index_list.json  dict_poly_index_map.json
src/: lib.rs  main.rs  symbols.rs
src/gsv/: mod.rs  v4.rs
src/text/: dict.rs  g2p_en.rs  g2p_jp.rs  g2pw.rs  mod.rs  num.rs
