[package]
name = "gpt_sovits_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
# ort = "1.16.3"
tokenizers = { version = "0.20.0", features = ["http"] }
tch = { version = "0.17.0" }
pinyin = "0.10.0"
wav_io = "0.1.14"
serde_json = "1.0"
jieba-rs = { version = "0.7", features = ["tfidf", "textrank"] }
grapheme_to_phoneme = "0.1.0"
arpabet = "2.0.0"
log = "0.4.22"
env_logger = "0.11.5"
text-splitter = "0.18"
lazy_static = "1.5.0"
regex = "1.11.0"
pest = "2.7"
pest_derive = "2.7"
