[package]
name = "gpt_sovits_rs"
version = "0.6.0"
edition = "2021"
description = "A GPT_Sovits inference lib in Rust base on pytorch"
license = "MIT"
repository = "https://github.com/second-state/gpt_sovits_rs"
authors = ["csh <458761603@qq.com>"]

exclude = ["resource/mini-bart-g2p.pt"]

[dependencies]
anyhow = "1.0.87"
# ort = { version = "2.0.0-rc.8" }
tokenizers = { version = "0.20.0", default-features = false, features = [
    "onig",
] }
tch = { version = "0.17.0" }
wav_io = "0.1.14"
serde_json = "1.0"
jieba-rs = { version = "0.7", features = ["tfidf", "textrank"] }
# grapheme_to_phoneme = "0.1"
num2en = "1.0.0"
log = "0.4.22"
env_logger = "0.11.6"
lazy_static = "1.5.0"
regex = "1.11.0"
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1.0", features = ["derive"] }
jpreprocess = { version = "0.12.0", default-features = false, features = [
    "naist-jdic",
] }

[dev-dependencies]
pinyin = "0.10.0"
